--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ li {
   list-style: none;
 }
 
+#accordionMenu {
+  display: none;
+}
+
 header {
   background-color: #1a48a6;
   padding: 12px 0;
@@ -98,25 +102,36 @@ h2 {
 
 form label,
 form input,
-form select {
+form select,
+.required_message {
   display: block;
   margin: 0 auto;
   width: 500px;
 }
+
+form label,
+.submit {
+  margin-top: 10px;
+}
+
 form input,
 form select {
   padding: 10px 0;
   border: solid 1px gray;
   font-size: 16px;
   box-sizing: border-box;
-  margin-bottom: 12px;
-
 }
 
 .required {
   color: red;
   font-size: 8px;
   margin-left: 6px;
+}
+
+.required_message {
+  display: none;
+  color: red;
+  font-size: 12px;
 }
 
 @media screen and (max-width: 670px) {
