--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,67 @@ header {
 }
 
 h2 {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+.about_content h2,
+.contact_content h2,
+.about_content p {
   text-align: center;
+}
+
+.about_content p {
+  font-size: 30px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+.underber_text {
+  background: linear-gradient(transparent 60%, #F39200 30%);
+  font-feature-settings: "palt";
+}
+
+.service_content {
+  width: 700px;
+  margin:0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.service_btn_content {
+  width: 700px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 12px;
+}
+
+.service_btn {
+  border: solid 3px gray;
+  width: 200px;
+  padding: 12px;
+  text-align: center;
+}
+
+#webBtn.active,
+#webBtn:hover {
+  background-color: #b3ffff;
+}
+
+#seoBtn.active,
+#seoBtn:hover {
+   background-color: #ffdea0;
+}
+
+#mobileBtn.active,
+#mobileBtn:hover {
+   background-color: #a7ff99;
+}
+
+.service_detail {
+  border: solid 3px gray;
+  padding: 0 8px;
 }
 
 form label,
@@ -145,7 +205,23 @@ form select {
   font-size: 30px;
 }
 
+@media screen and (max-width: 730px) {
+  .about_content p {
+    font-size: 24px;
+  }
 
+  .service_content {
+    width: 500px;
+  }
+
+  .service_btn_content {
+    width: 500px;
+  }
+  .service_btn {
+    width: 140px;
+    padding: 6px;
+  }
+}
 
 @media screen and (max-width: 670px) {
   #accordionMenu {
@@ -185,12 +261,37 @@ form select {
     font-size: 40px;
   }
 
+  .about_content p {
+  font-size: 20px;
+  }
+
+  .service_content {
+    width: 500px;
+  }
+
+  .service_btn_content {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 300px;
+  }
+
+
   .thanks_message {
     font-size: 16px;
   }
 }
 
 @media screen and (max-width: 530px) {
+  .about_content p{
+    font-size: 16px;
+  }
+
+  .service_content {
+    width: 300px;
+  }
+
+
   form label,
   form input,
   form select,
