--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ header {
   padding: 12px 0;
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 
 .header_content {
@@ -57,6 +58,7 @@ header {
   background: transparent;
   border: none;
   cursor: pointer;
+  align-items: center;
 }
 
 .hamburger_content span {
